samples/by-property/invalid/nil-test2.bspl
../../tests/nil-test2.bspl